[gd_scene load_steps=5 format=3 uid="uid://cmhijqulpc5o4"]

[ext_resource type="PackedScene" uid="uid://ct80oxtteghvt" path="res://scenes/player/base_player.tscn" id="1_05dot"]
[ext_resource type="Script" uid="uid://cs7jwys6q2r8v" path="res://scenes/player/library_player.gd" id="2_qghe7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_05dot"]
size = Vector2(602, 272)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qghe7"]
size = Vector2(597, 854)

[node name="LibraryPlayer" groups=["Player"] instance=ExtResource("1_05dot")]
script = ExtResource("2_qghe7")

[node name="CatchBox" type="Area2D" parent="." index="2"]
position = Vector2(0, -439)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatchBox" index="0"]
position = Vector2(21, -32)
shape = SubResource("RectangleShape2D_05dot")

[node name="PushArea" type="Area2D" parent="." index="3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushArea" index="0"]
position = Vector2(6.5, 104)
shape = SubResource("RectangleShape2D_qghe7")

[connection signal="body_entered" from="CatchBox" to="." method="_on_catch_box_body_entered"]
